Created black highlighter on colorful sketchpad Sketchpad resolution can be changed. Every time you hover over a pixel it darkens by 10%. Pixel colors are chosen randomly. Potential future bug: pixel colors go into the negatives.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="text">
+    <button onclick="resetBoard()">Set side length</button>
     <div id="sketchpad">
     </div>
 
